<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main_menu_link_group"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/nav_history"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/nav_profile"/>
    </group>
    <group
        android:id="@+id/main_menu_link_group_about"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_contributor"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/nav_contributor"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings"/>
    </group>
</menu>